# rust-password-server

./: .env.example  Cargo.toml  Dockerfile  README.md  action.yml  routes.md
.github/workflows/: docker-test.yml  rust-ci.yml  rust-test.yml
docker/: .env.example  docker-compose.yml  init.sql
src/: main.rs
src/bounded_context/: mod.rs
src/bounded_context/application/: create_password.rs  delete_password.rs  get_password.rs  mod.rs  search_password.rs  sort_password.rs
src/bounded_context/builders/: create_password_builder.rs  mod.rs  start_server_builder.rs
src/bounded_context/domain/: mod.rs  password.rs  password_db.rs
src/bounded_context/infrastructure/: mod.rs
src/bounded_context/infrastructure/config/: app_config.rs
src/bounded_context/infrastructure/db/: postgres_db.rs
src/bounded_context/infrastructure/http/: configure_routes.rs  index_controller.rs  mod.rs  run_server.rs  status_controller.rs
src/bounded_context/utility/: encryption.rs
tests/: domain_password_test.rs  infrastructure_db_postgres_db_test.rs  utility_encryption_test.rs
